--- a/css/veterinario.css
+++ b/css/veterinario.css
@@ -1,12 +1,21 @@
+/*General*/
 *{
-    margin: 5px;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body{
-    background-color: #EFF6FF;
+    background-image: url(/assets/wallpaper-vet.jpg);
+}
+
+.container-fluid{
+    height: 100%;
+    width: 100%;
+    background:linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.05));
+    background-position: absolute;
+    background-size: cover;
 }
 
 .head{
@@ -33,10 +42,11 @@ body{
     font-size: small;
 }
 
+/*Registro y login*/
 .form{
     background-color: #00ACB1;
-    width: 50%;
-    margin-left: 25%;
+    width: 450px;
+    margin: 20px 400px;
     display: flex;
     align-items: center;
     justify-content:space-around;
@@ -56,15 +66,81 @@ body{
     font-size: larger;
 }
 
+.col-form-label{
+    width: 200px;
+    font-size: 17px !important;
+    display: flex;
+    justify-content: center;
+}
+
+.form-control{
+    height: 25px;
+}
+
 .btn{
     background-color: #052D3C !important;
     border: none !important;
+    font-size: large !important;
+    font-weight: bold !important;
 }
 
-.card-component:hover{
-    background-color: #188589;
+.btn:hover{
+    background-color: #0c475c !important;
 }
 
-.card-component:active{
-    background-color: #046467;
+.btn:active{
+    background-color: #15262c!important;
+}
+
+.link{
+    color: #063b4e;
+}
+
+.link:active{
+    color: #fff;
+}
+
+/*Dashboard e historia clínica*/
+
+.left-component{
+    background-color: #00ACB1;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    flex-direction: column;
+    border-radius: 0 1em 1em 0;
+    margin-left: -70px;
+    padding: 15px 0;
+}
+.left-option{
+    display: flex;
+    align-items: center;
+}
+
+.left-title{
+    color: #052D3C;
+    font-size: x-large;
+    font-weight: bolder;
+}
+
+.option-text{
+    color: white;
+    font-size: larger;
+    font-weight: bold;
+}
+.option-icon{
+    height: 40px;
+    width: 40px;
+    padding-left: 10px;
+}
+
+.main-title{
+    color: #052D3C;
+    font-size: x-large;
+    font-weight: bolder;
+}
+
+.form-icon{
+    height: 100px;
+    width: 100px;
 }
