--- a/css/cliente.css
+++ b/css/cliente.css
@@ -1,9 +1,21 @@
 /*General*/
 *{
-    margin: 5px;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body{
+    background-image: url(/assets/wallpaper-vet.jpg);
+}
+
+.container-fluid{
+    height: 100%;
+    width: 100%;
+    background:linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.05));
+    background-position: absolute;
+    background-size: cover;
 }
 
 .head{
@@ -33,8 +45,8 @@
 /*Registro y login*/
 .form{
     background-color: #00ACB1;
-    width: 50%;
-    margin-left: 25%;
+    width: 450px;
+    margin: 20px 400px;
     display: flex;
     align-items: center;
     justify-content:space-around;
@@ -54,6 +66,17 @@
     font-size: larger;
 }
 
+.col-form-label{
+    width: 200px;
+    font-size: 17px !important;
+    display: flex;
+    justify-content: center;
+}
+
+.form-control{
+    height: 25px;
+}
+
 .btn{
     background-color: #052D3C !important;
     border: none !important;
@@ -62,11 +85,19 @@
 }
 
 .btn:hover{
-    background-color: #188589 !important;
+    background-color: #0c475c !important;
 }
 
 .btn:active{
-    background-color: #046467!important;
+    background-color: #15262c!important;
+}
+
+.link{
+    color: #063b4e;
+}
+
+.link:active{
+    color: #fff;
 }
 
 /*Dashboard, mascotas y citas*/
